Delete LegacyTemporaryFileBuilder
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>